# agri_challenge

./: CMakeLists.txt  README.md  package.xml
launch/: tiago.launch  tomato_field.launch
models/tomato_fruit1/materials/scripts/: fruit1.material
models/tomato_fruit2/meshes/: tomato.stl
models/tomato_plant1/: model.config  model.sdf
models/tomato_plant2/: model.config  model.sdf
models/tomato_tree1/materials/scripts/: blossom2.material  blossom3.material  branch.material  fruit3.material  fruit4.material  leaf1.material
models/tomato_tree2/materials/scripts/: blossom1.material  fruit2.material  leaf2.material
worlds/tomato_field/: tomato_field.world
