<?xml version="1.0"?>
<package format="2">
  <name>agri_challenge</name>
  <version>0.0.0</version>
  <description>The IRIM Agri Challenge package</description>

  <maintainer email="andrea.pupa@unimore.it"> Andrea Pupa </maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/tomato_field_world"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds/tomato_field_world"/> 
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>  
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>
